adding endofFile marks to all locales
adding missing placeholders for:
_es , _fi, _fr, _pl, _pt_BR

please make sure theres only one whitespace in front and after the '='

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12096 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_es.properties
+++ b/src/resources/i18n/spark_i18n_es.properties
@@ -189,7 +189,7 @@ label.resource = &Recurso
 label.response.timeout = &Tiempo m\u00e1ximo de espera (seg)
 label.room = &Cuarto
 label.room.name = &Nombre del cuarto
-label.room.topic= &Tema del cuarto
+label.room.topic = &Tema del cuarto
 label.search.service = &Servicio de b\u00fasqueda
 label.server = &Servidor
 label.server.address = &Direcci\u00f3n del servidor
@@ -218,7 +218,7 @@ menuitem.add.contact = Agregar contacto
 menuitem.add.contact.group = Agregar contacto al grupo
 menuitem.add.groupchat.myname = Destacar mi nombre cuando alguien lo dice
 menuitem.add.groupchat.mytext = Destacar mi texto cuando yo digo algo
-menuitem.add.groupchat.popname= Mostrar mensaje emergente cuando alguien dice mi nombre
+menuitem.add.groupchat.popname = Mostrar mensaje emergente cuando alguien dice mi nombre
 menuitem.alert.when.online = Alertar cuando el usuario est\u00e9 disponible
 menuitem.ban = Censurar
 menuitem.ban.user = Censurar usuario
@@ -250,7 +250,7 @@ menuitem.invite.group.to.conference = Invitar grupo a conferencia
 menuitem.invite.users = Invitar usuarios
 menuitem.join.on.startup = Ingresar al comienzo
 menuitem.join.room = Ingresar al cuarto
-menuitem.kick.user= Desconectar usuario
+menuitem.kick.user = Desconectar usuario
 menuitem.languages = Idiomas
 menuitem.logout.no.status = Cerrar la sesi\u00f3n
 menuitem.logout.with.status = Cerrar sesi\u00f3n con un motivo
@@ -699,3 +699,77 @@ user.has.signed.in = se ha conectado.
 user.has.signed.off = se ha desconectado.
 while.offline = mientras estaba desconectado
 yes = Si
+
+
+##########################################
+#                                        #
+#                                        #
+#       Missing Translation:             #
+#                                        #
+#                                        #
+##########################################
+
+administrator = Administrator
+button.reject = Reject
+button.login = &Login
+button.re.detect = &Re-detect
+checkbox.notify.typing.systemtray = &Show typing notification in the system tray
+checkbox.notify.systemtray = Show new &messages in the system tray
+checkbox.use.debugger.on.startup = Start debugger on startup
+checkbox.use.krbconf = Use krb5.conf or krb5.ini
+checkbox.use.krb.dns = Use DNS
+checkbox.use.specify.below = Specify below
+checkbox.use.pki.authentication = Use PKI authentication
+label.na = n/a
+label.cell = Cell
+label.work = Work
+label.home = Home
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Which PKI method?
+label.choose.file = Choose file
+label.trust.store.password = Trust store password
+label.enter.password = Enter password
+label.move.focus.forwards = Move focus forwards
+label.move.focus.backwards = Move focus backwards
+label.keystore.location = Keystore location
+label.truststore.location = Truststore location
+label.pkcs.library.file = PKCS#11 library file
+label.x509.certificate = X.509 certificate
+label.apple.keychain = Apple KeyChain
+label.add.to.roster = Add user to your roster
+label.audio.device = &Audio device
+label.video.device = &Video device
+menuitem.bookmarks = Bookmarks
+menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
+menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
+menuitem.always.on.top = Always on top
+menuitem.block.contact = Block contact
+menuitem.unblock.contact = Unblock contact
+menuitem.expand.all.groups = Expand all groups
+menuitem.collapse.all.groups = Collapse all groups
+menuitem.inivite.again = Invite again
+menuitem.chatframe.option = Options
+message.invite.to.groupchat = {0} is inviting you to join a group chat
+message.enter.sametime = Enter your Sametime username and password below
+message.enter.facebook = Enter your Facebook username and password below
+message.enter.myspace = Enter your MySpace username and password below
+message.nickname.not.acceptable = Nickname change is not enabled!
+message.groupchat.require.password = This group chat room requires a password to enter
+message.search.for.history = Search conversation history
+tab.sso = SSO
+tab.pki = PKI
+title.password.required = Password required
+title.task.notification = Task notification
+title.client.logs = Client logs
+title.bookmarks = Bookmarks
+title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
+title.general.media = Media settings
+title.aim.registration = AIM account credentials
+title.sametime.registration = Sametime account credentials
+title.facebook.registration = Facebook account credentials
+title.myspace.registration = MySpace account credentials
+title.subscription.request = Subscription request
+tooltip.place.a.call = Place a call to this individual
+
+#!#
