--- a/src/resources/i18n/spark_i18n_fi.properties
+++ b/src/resources/i18n/spark_i18n_fi.properties
@@ -333,7 +333,7 @@ label.change.password.to = &Uusi salasana
 label.username = &K\ufffdytt\ufffdj\ufffdnimi
 label.name = &Nimi
 label.room.name = &Huoneen nimi
-label.room.topic= Puheen &aihe
+label.room.topic = Puheen &aihe
 label.password = &Salasana
 label.confirm.password = &Varmista salasana
 label.server = &Palvelin
@@ -349,7 +349,6 @@ label.host = &Is\ufffdnt\ufffd
 label.resource = &Resurssi
 label.protocol = &Protokolla
 label.accounts = &Tilit
-label.receieved = &Vastaanotettu
 label.transfer.timeout = &Siirron aikakatkaisu (min):
 label.transfer.download.directory = &Lataushakemisto:
 label.find = &Etsi
@@ -582,7 +581,6 @@ message.number.to.call = Anna numero, johon soitetaan
 message.no.caller.id = Soittajan tunnistetta ei ole saatavilla
 message.no.history.found = Keskusteluhistoriaa ei l\ufffdytynyt t\ufffdlle k\ufffdytt\ufffdj\ufffdlle.
 message.prompt.plugin.uninstall = Haluatko poistaa lis\ufffdosan {0}?
-message.restart.spark = Lis\ufffdosa poistetaan seuraavan k\ufffdynnistyksen yhteydess\ufffd.
 message.loading.please.wait = Ladataan. Odota hetki...
 message.plugins.not.available = Lis\ufffdosia tarjoavaan palvelimeen ei saada yhteytt\ufffd.
 message.downloading = Ladataan {0}
@@ -868,3 +866,115 @@ tooltip.appearance = Vaihda keskusteluikkunoiden tyyli\ufffd.
 tooltip.file.transfer = Tiedostonsiirron asetukset
 tooltip.send.email = L\ufffdhet\ufffd s\ufffdhk\ufffdposti.
 tooltip.start.chat = Aloita keskustelu.
+
+
+##########################################
+#                                        #
+#                                        #
+#       Missing Translation:             #
+#                                        #
+#                                        #
+##########################################
+
+
+administrator = Administrator
+apply = Apply
+button.reject = Reject
+button.login = &Login
+button.unset.file.explorer = Unset File Browser
+button.re.detect = &Re-detect
+checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
+checkbox.notify.typing.systemtray = &Show typing notification in the system tray
+checkbox.notify.systemtray = Show new &messages in the system tray
+checkbox.show.avatars.in.contactlist = Show &avatars in contact list
+checkbox.use.debugger.on.startup = Start debugger on startup
+checkbox.broadcast.hide.offline.user = Hide offline user
+checkbox.use.krbconf = Use krb5.conf or krb5.ini
+checkbox.use.krb.dns = Use DNS
+checkbox.use.specify.below = Specify below
+checkbox.use.pki.authentication = Use PKI authentication
+gateway.username.password.error = Username and/or password need to be supplied
+group.chat.name.notification = Seen your name...
+group.chat.name.match = Your name has been said in group chat:
+label.na = n/a
+label.cell = Cell
+label.work = Work
+label.home = Home
+label.downloads = Downloads
+label.received = Received
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Which PKI method?
+label.choose.file = Choose file
+label.trust.store.password = Trust store password
+label.enter.password = Enter password
+label.move.focus.forwards = Move focus forwards
+label.move.focus.backwards = Move focus backwards
+label.keystore.location = Keystore location
+label.truststore.location = Truststore location
+label.pkcs.library.file = PKCS#11 library file
+label.x509.certificate = X.509 certificate
+label.apple.keychain = Apple KeyChain
+label.add.to.roster = Add user to your roster
+label.audio.device = &Audio device
+label.video.device = &Video device
+menuitem.bookmarks = Bookmarks
+menuitem.add.groupchat.myname = Highlight my &name when someone says it
+menuitem.add.groupchat.mytext = &Highlight my text when I say something
+menuitem.add.groupchat.popname = Show &toast popup when someone says my name
+menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
+menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
+menuitem.always.on.top = Always on top
+menuitem.open.with = Open with...
+menuitem.block.contact = Block contact
+menuitem.unblock.contact = Unblock contact
+menuitem.show.offline.users = Show offline users
+menuitem.show.contact.statusmessage = Show status message
+menuitem.bookmark.room = Bookmark room
+menuitem.refresh = Refresh
+menuitem.create.room = Create or join room
+menuitem.expand.all.groups = Expand all groups
+menuitem.collapse.all.groups = Collapse all groups
+menuitem.inivite.again = Invite again
+menuitem.chatframe.option = Options
+message.invite.to.groupchat = {0} is inviting you to join a group chat
+message.enter.gtalk = Enter your GTalk username and password below
+message.enter.sametime = Enter your Sametime username and password below
+message.enter.facebook = Enter your Facebook username and password below
+message.enter.myspace = Enter your MySpace username and password below
+message.enter.xmpp = Enter your XMPP username and password below
+message.file.transfer.notification = File transfer notification
+message.file.transfer.short.message = is sending you a file called\:
+message.file.transfer.chat.window = File transfer request:
+message.nickname.not.acceptable = Nickname change is not enabled!
+message.restart.spark.changes = Plugin will be removed on the next startup of Spark
+message.groupchat.require.password = This group chat room requires a password to enter
+message.search.for.history = Search conversation history
+tab.sso = SSO
+tab.pki = PKI
+title.password.required = Password required
+title.task.notification = Task notification
+title.client.logs = Client logs
+title.bookmarks = Bookmarks
+title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
+title.delete.file = Do you really want to delete this file?
+title.error.couldnt.open.file = Could not open the file
+title.error.delete.file = Could not delete file
+title.error.find.app = Could not find a matching application
+title.error.rename.file = Could not rename the file
+title.file = File
+title.filesize = Size
+title.general.media = Media settings
+title.group.chat.settings = Group chat settings
+title.gtalk.registration = GTalk account credentials
+title.sametime.registration = Sametime account credentials
+title.facebook.registration = Facebook account credentials
+title.myspace.registration = MySpace account credentials
+title.input.fileexplorer = Please input the name of your file browser:
+title.input.newname = Please input the new name\:
+title.input.openwith = Please input the name of the application which you want to use:
+title.xmpp.registration = XMPP account credentials
+title.appearance.showVCards = Show &VCards in the contact list
+title.subscription.request = Subscription request
+
+#!#
