--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -124,7 +124,6 @@ label.postal.code = &Code Postal
 label.presence = &Pr\u00E9sence
 label.priority = P&riorit\u00E9
 label.protocol = &Protocole
-label.receieved = &Re\u00E7u
 label.rename.to = Renommer
 label.resource = &Resource
 label.response.timeout = &Temps maximal de r\u00E9ponse (sec)
@@ -532,4 +531,231 @@ tree.conference.services = Service de Conf\u00E9rence
 tree.users.in.room = Utilisateurs du Salon
 use.default = Utiliser les valeurs par d\u00E9faut
 yes = Oui
-menuitem.quit = Quitter
+
+
+##########################################
+#                                        #
+#                                        #
+#       Missing Translation:             #
+#                                        #
+#                                        #
+##########################################
+
+administrator = Administrator
+answer = Answer
+apply = Apply
+available = Available
+broadcast = Broadcast
+offline = Offline
+online = Online
+participants = Participants
+unfiled = Unfiled
+user.has.signed.in = has signed in.
+user.has.signed.off = has signed off.
+while.offline = While offline
+action.clear = Clear
+action.copy = Copy
+action.cut = Cut
+action.paste = Paste
+action.print = Print
+action.save = Save
+action.select.all = Select all
+button.reject = Reject
+button.add.user = Add user
+button.add2 = Add
+button.copy.to.clipboard = Copy to clipboard
+button.login = &Login
+button.reconnect2 = Reconnect
+button.save = Save
+button.send = Send
+button.send.email = Email
+button.start.chat = Chat
+button.tasks.active = Active
+button.tasks.all = All
+button.unset.file.explorer = Unset File Browser
+button.view.notes = View notes
+button.view.profile = View full profile
+button.view.tasklist = View task list
+button.re.detect = &Re-detect
+checkbox.allow.buzz = Allow users to &buzz you
+checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
+checkbox.enable.emoticons = E&nable emoticons
+checkbox.notify.user.comes.online = Notify when a user &comes online
+checkbox.notify.user.goes.offline = &Notify when a user goes offline
+checkbox.notify.typing.systemtray = &Show typing notification in the system tray
+checkbox.notify.systemtray = Show new &messages in the system tray
+checkbox.show.avatars.in.contactlist = Show &avatars in contact list
+checkbox.tabs.on.top = Chat tabs &appear on top (requires restart)
+checkbox.use.compression = Use compression
+checkbox.use.debugger.on.startup = Start debugger on startup
+checkbox.use.system.look.and.feel = Use system &look And feel (requires restart)
+checkbox.broadcast.hide.offline.user = Hide offline user
+checkbox.use.krbconf = Use krb5.conf or krb5.ini
+checkbox.use.krb.dns = Use DNS
+checkbox.use.specify.below = Specify below
+checkbox.use.pki.authentication = Use PKI authentication
+delete.log.permanently = Permanently delete log
+delete.permanently = Permanently delete?
+gateway.username.password.error = Username and/or password need to be supplied
+group.empty = There are no online contacts in this group
+group.offline = Offline group
+group.chat.name.notification = Seen your name...
+group.chat.name.match = Your name has been said in group chat:
+label.na = n/a
+label.cell = Cell
+label.work = Work
+label.home = Home
+label.add.task = Add task
+label.chatroom.fontsize = Chat room &font size:
+label.conflict.error = Unable to login due to account already signed in
+label.contactlist.avatarsize = Contact list avatar &size:
+label.contactlist.fontsize = &Contact List font size:
+label.downloads = Downloads
+label.due = Due
+label.emoticons = &Emoticons
+label.message.style = Message style
+label.network = Network
+label.received = Received
+label.show = Show:
+label.timeformat = Use {0}
+label.unable.to.add.contact = Unable to add contact
+label.user.on.public.network = User is on a public network
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Which PKI method?
+label.choose.file = Choose file
+label.trust.store.password = Trust store password
+label.enter.password = Enter password
+label.move.focus.forwards = Move focus forwards
+label.move.focus.backwards = Move focus backwards
+label.keystore.location = Keystore location
+label.truststore.location = Truststore location
+label.pkcs.library.file = PKCS#11 library file
+label.x509.certificate = X.509 certificate
+label.apple.keychain = Apple KeyChain
+label.add.to.roster = Add user to your roster
+label.audio.device = &Audio device
+label.video.device = &Video device
+menuitem.bookmarks = Bookmarks
+menuitem.add.groupchat.myname = Highlight my &name when someone says it
+menuitem.add.groupchat.mytext = &Highlight my text when I say something
+menuitem.add.groupchat.popname = Show &toast popup when someone says my name
+menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
+menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
+menuitem.always.on.top = Always on top
+menuitem.copy.to = Copy to
+menuitem.delete.login.information = Delete login information
+menuitem.dial = Dial
+menuitem.enter.login.information = Enter login information
+menuitem.languages = Languages
+menuitem.move.to = Move to
+menuitem.open.with = Open with...
+menuitem.block.contact = Block contact
+menuitem.unblock.contact = Unblock contact
+menuitem.show.offline.group = Group offline users
+menuitem.sign.in = Sign in
+menuitem.sign.in.at.login = Sign in at login
+menuitem.sign.out = Sign out
+menuitem.user.guide = User guide
+menuitem.view.logs = View logs
+menuitem.show.offline.users = Show offline users
+menuitem.show.contact.statusmessage = Show status message
+menuitem.bookmark.room = Bookmark room
+menuitem.refresh = Refresh
+menuitem.create.room = Create or join room
+menuitem.expand.all.groups = Expand all groups
+menuitem.collapse.all.groups = Collapse all groups
+menuitem.inivite.again = Invite again
+menuitem.chatframe.option = Options
+message.invite.to.groupchat = {0} is inviting you to join a group chat
+message = Message
+message.alert.notify = Alert notification
+message.buzz.alert.notification = Get the user's attention
+message.buzz.sent = Sent alert notification to user
+message.disconnected.group.chat.error = Your connection was closed due to an error, you will need to re-join this room after reconnecting
+message.disconnected.shutdown = Your connection was closed because the server was shut down
+message.enter.gadugadu = Enter your GaduGadu username and password below
+message.enter.gtalk = Enter your GTalk username and password below
+message.enter.irc = Enter your IRC username, password and nickname below
+message.enter.sametime = Enter your Sametime username and password below
+message.enter.facebook = Enter your Facebook username and password below
+message.enter.myspace = Enter your MySpace username and password below
+message.enter.qq = Enter your QQ Number and password below
+message.enter.simple = Enter your SIMPLE username and password below
+message.enter.xmpp = Enter your XMPP username and password below
+message.file.transfer.notification = File transfer notification
+message.file.transfer.short.message = is sending you a file called\:
+message.file.transfer.chat.window = File transfer request:
+message.gateway.username.error = Username needs to be supplied
+message.gateway.password.error = Password needs to be supplied
+message.gateway.nickname.error = Nickname needs to be supplied
+message.invalid.username.password = Invalid username or password
+message.nickname.not.acceptable = Nickname change is not enabled!
+message.no.updates = There are no updates
+message.normal = Normal message
+message.reconnect.attempting = Attempting...
+message.reconnect.failed = Reconnect failed
+message.reconnect.wait = Reconnecting in {0} seconds
+message.restart.required = You will need to restart Spark to have your changes take effect, restart now?
+message.room.creation.error = The room could not be created
+message.send.to.these.people = Send to these people
+message.server.unavailable = Can't connect to server: invalid name or server not reachable
+message.unable.to.retrieve.last.activity = Unable to determine last activity for {0}
+message.unrecoverable.error = Invalid username or password
+message.waiting.for.user.to.join = Waiting for {0} to join
+message.your.voice.granted = You have been given a voice in this chat
+message.groupchat.require.password = This group chat room requires a password to enter
+message.search.for.history = Search conversation history
+status.away = Away
+status.custom.messages = Custom messages
+status.do.not.disturb = Do not disturb
+status.extended.away = Extended away
+status.free.to.chat = Free to chat
+status.on.phone = On the phone
+status.online = Online
+status.pending = Pending
+tab.sso = SSO
+tab.pki = PKI
+title.about = About
+title.password.required = Password required
+title.task.notification = Task notification
+title.client.logs = Client logs
+title.bookmarks = Bookmarks
+title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
+title.appearance = Appearance
+title.appearance.preferences = Customization
+title.delete.file = Do you really want to delete this file?
+title.error.couldnt.open.file = Could not open the file
+title.error.delete.file = Could not delete file
+title.error.find.app = Could not find a matching application
+title.error.rename.file = Could not rename the file
+title.file = File
+title.filesize = Size
+title.gadugadu.registration = GaduGadu account credentials
+title.general.media = Media settings
+title.group.chat.settings = Group chat settings
+title.gtalk.registration = GTalk account credentials
+title.irc.registration = IRC account credentials
+title.sametime.registration = Sametime account credentials
+title.facebook.registration = Facebook account credentials
+title.myspace.registration = MySpace account credentials
+title.input.fileexplorer = Please input the name of your file browser:
+title.input.newname = Please input the new name\:
+title.input.openwith = Please input the name of the application which you want to use:
+title.login.error = Login error
+title.no.updates = No updates
+title.notes = Notes
+title.qq.registration = QQ account credentials
+title.simple.registration = SIMPLE account credentials
+title.tasks = Tasks
+title.xmpp.registration = XMPP account credentials
+title.appearance.showVCards = Show &VCards in the contact list
+title.subscription.request = Subscription request
+tooltip.appearance = Change the appearance of your conversations
+tooltip.file.transfer = Preferences for file transfer
+tooltip.place.voice.call = Place a phone call to this user
+tooltip.send.email = Send an e-mail
+tooltip.start.chat = Start a conversation
+
+
+#!#
