--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -1,5 +1,5 @@
 # Spark
-
+        
 ok = Ok
 cancel = Cancelar
 use.default = Usar Padr\u00e3o
@@ -91,7 +91,7 @@ label.chatroom.fontsize = Tamanho da fonte no Chat:
 label.username = &Usu\u00e1rio
 label.name = &Nome
 label.room.name = &Nome da Sala
-label.room.topic= &T\u00f3pico da Sala
+label.room.topic = &T\u00f3pico da Sala
 label.password = &Senha
 label.confirm.password = &Confirme a senha
 label.server = &Servidor
@@ -109,13 +109,12 @@ label.host = &Endere\u00e7o
 label.resource = &Recursos
 label.protocol = &Protocolo
 label.accounts = &Contas
-label.receieved = &Recebido
 label.transfer.timeout = &Tempo M\u00e1ximo de Transfer\u00eancia(min):
 label.transfer.download.directory = &Pasta de Download:
 label.find = &Encontrar
 label.rename.to = Renomear para
 label.contact.to.find = Contato a ser Encontrado?
-label.available.users.in.roster =   &Usu\u00e1rios Online na Lista de Contatos
+label.available.users.in.roster =  &Usu\u00e1rios Online na Lista de Contatos
 label.time = Tempo: {0}
 label.add.conference.service = &Adicionar Servi\u00e7o de Confer\u00eancia
 label.add.jid = &Adicionar JID
@@ -162,7 +161,7 @@ label.enter.group.name = Digite o nome do grupo
 
 message.username.error = Especificar um nome de usu\u00e1rio para esta conta.
 message.password.error = Especificar uma senha para esta conta.
-message.confirmation.password.error =  Especificar senha de confirma\u00e7\u00e3o.
+message.confirmation.password.error = Especificar senha de confirma\u00e7\u00e3o.
 message.account.error = Especificar o servidor em que a conta ser\u00e1 criada.
 message.registering = Registrando como {0}. Aguarde...
 message.connection.failed = Imposs\u00edvel Conectar{0}.
@@ -554,75 +553,220 @@ tooltip.view.history = Ver hist\u00f3rico de conversas
 tooltip.view.changelog = Ver Log de mudan\u00e7as
 tooltip.view.readme = Ver LeiaMe
 tooltip.notifications = Prefer\u00eancias de notifica\u00e7\u00e3o de novos Chats.
-available=Dispon\u00edvel
-broadcast=Espalhar
-offline=Offline
-online=Online
-participants=Participantes
-unfiled=Indefinido
-user.has.signed.in=Usu\u00e1rio entrou
-user.has.signed.off=Usu\u00e1rio saiu
-while.offline=Enquanto Offline
-action.clear=Limpar
-action.copy=Copiar
-action.cut=Recortar
-action.paste=Colar
-action.print=Imprimir
-action.save=Salvar
-action.select.all=Selecionar Tudo
-button.add.user=Adicionar Usu\u00e1rio
-button.add2=Adicionar
-button.copy.to.clipboard=Copiar
-button.quit=Sair
-button.save=Salvar
-button.send=Enviar
-button.send.email=Enviar Email
-button.start.chat=Iniciar Chat
-button.tasks.active=Ativas
-button.tasks.all=Todas
-button.view.profile=Ver Perfil
-checkbox.show.avatars.in.contactlist=Mostrar Avatar na lista de contatos
-checkbox.tabs.on.top=Mostrar Chat no Topo (Necessita Reiniciar)
-checkbox.use.compression=Usar Compress\u00e3o
-delete.log.permanently=Apagar Permanentemente
-delete.permanently=Apagar Permanentemente?
-gateway.username.password.error=Informe Usu\u00e1rio e Senha.
-group.empty=Nenhum usu\u00e1rio online.
-group.offline=Grupo Offline
-label.add.task=Adicionar tarefa
-label.conflict.error=
-label.emoticons=&Emoticons
-label.message.style=Estilo &Mensagem
-label.network=&Rede
-label.received=&Recebido
-label.show=Mostrar:
-label.timeformat=Usar {0}
-label.unable.to.add.contact=Imposs\u00edvel adicionar contato.
-label.user.on.public.network=Usu\u00e1rio est\u00e1 em uma rede p\u00fablica
-menuitem.delete.login.information=Remover informa\u00e7\u00e3o de login
-menuitem.dial=Discar
-menuitem.enter.login.information=Entrar com informa\u00e7\u00e3o de login
-menuitem.languages=Tradu\u00e7\u00f5es
-menuitem.sign.in.at.login=Conectar ao iniciar
-menuitem.sign.out=Sair
-menuitem.user.guide=Guia do Usu\u00e1rio
-message.autenticating=Autenticando
-message.buzz.alert.notification=Chamar Aten\u00e7\u00e3o
-message.buzz.sent=Enviar alerta ao usu\u00e1rio.
-message.cannot.add.contact.to.shared.group=Voc\u00ea n\u00e3o pode adicionar contatos a um grupo compartilhado.
-message.enter.xmpp=Entre com seu usu\u00e1rio e senha XMPP.
-message.invalid.status=Especifique um status v\u00e1lido.
-message.invalid.username.password=Usu\u00e1rio e Senha inv\u00e1lidos.
-message.no.updates=N\u00e3o h\u00e1 updates.
-message.reconnect.attempting=Tentando...
-message.reconnect.failed=Reconex\u00e3o Falhou.
-message.reconnect.wait=Reconectando em {0} segundos.
-message.restart.spark.changes=O plugin ser\u00e1 removido na pr\u00f3xima inicializa\u00e7\u00e3o.
-title.about=Sobre
-title.download.complete=Download completo
-title.notes=Notas
-title.password=Senha
-tooltip.place.voice.call=Chamar este Usu\u00e1rio
-tooltip.send.email=Enviar Email
-tooltip.start.chat=Iniciar conversa
-menuitem.quit=Sair
+available = Dispon\u00edvel
+broadcast = Espalhar
+offline = Offline
+online = Online
+participants = Participantes
+unfiled = Indefinido
+user.has.signed.in = Usu\u00e1rio entrou
+user.has.signed.off = Usu\u00e1rio saiu
+while.offline = Enquanto Offline
+action.clear = Limpar
+action.copy = Copiar
+action.cut = Recortar
+action.paste = Colar
+action.print = Imprimir
+action.save = Salvar
+action.select.all = Selecionar Tudo
+button.add.user = Adicionar Usu\u00e1rio
+button.add2 = Adicionar
+button.copy.to.clipboard = Copiar
+button.quit = Sair
+button.save = Salvar
+button.send = Enviar
+button.send.email = Enviar Email
+button.start.chat = Iniciar Chat
+button.tasks.active = Ativas
+button.tasks.all = Todas
+button.view.profile = Ver Perfil
+checkbox.show.avatars.in.contactlist = Mostrar Avatar na lista de contatos
+checkbox.tabs.on.top = Mostrar Chat no Topo (Necessita Reiniciar)
+checkbox.use.compression = Usar Compress\u00e3o
+delete.log.permanently = Apagar Permanentemente
+delete.permanently = Apagar Permanentemente?
+gateway.username.password.error = Informe Usu\u00e1rio e Senha.
+group.empty = Nenhum usu\u00e1rio online.
+group.offline = Grupo Offline
+label.add.task = Adicionar tarefa
+label.conflict.error = 
+label.emoticons = &Emoticons
+label.message.style = Estilo &Mensagem
+label.network = &Rede
+label.received = &Recebido
+label.show = Mostrar:
+label.timeformat = Usar {0}
+label.unable.to.add.contact = Imposs\u00edvel adicionar contato.
+label.user.on.public.network = Usu\u00e1rio est\u00e1 em uma rede p\u00fablica
+menuitem.delete.login.information = Remover informa\u00e7\u00e3o de login
+menuitem.dial = Discar
+menuitem.enter.login.information = Entrar com informa\u00e7\u00e3o de login
+menuitem.languages = Tradu\u00e7\u00f5es
+menuitem.sign.in.at.login = Conectar ao iniciar
+menuitem.sign.out = Sair
+menuitem.user.guide = Guia do Usu\u00e1rio
+message.autenticating = Autenticando
+message.buzz.alert.notification = Chamar Aten\u00e7\u00e3o
+message.buzz.sent = Enviar alerta ao usu\u00e1rio.
+message.cannot.add.contact.to.shared.group = Voc\u00ea n\u00e3o pode adicionar contatos a um grupo compartilhado.
+message.enter.xmpp = Entre com seu usu\u00e1rio e senha XMPP.
+message.invalid.status = Especifique um status v\u00e1lido.
+message.invalid.username.password = Usu\u00e1rio e Senha inv\u00e1lidos.
+message.no.updates = N\u00e3o h\u00e1 updates.
+message.reconnect.attempting = Tentando...
+message.reconnect.failed = Reconex\u00e3o Falhou.
+message.reconnect.wait = Reconectando em {0} segundos.
+message.restart.spark.changes = O plugin ser\u00e1 removido na pr\u00f3xima inicializa\u00e7\u00e3o.
+title.about = Sobre
+title.download.complete = Download completo
+title.notes = Notas
+title.password = Senha
+tooltip.place.voice.call = Chamar este Usu\u00e1rio
+tooltip.send.email = Enviar Email
+tooltip.start.chat = Iniciar conversa
+
+
+
+
+##########################################
+#                                        #
+#                                        #
+#       Missing Translation:             #
+#                                        #
+#                                        #
+##########################################
+
+administrator = Administrator
+answer = Answer
+apply = Apply
+button.reject = Reject
+button.login = &Login
+button.reconnect2 = Reconnect
+button.unset.file.explorer = Unset File Browser
+button.re.detect = &Re-detect
+checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
+checkbox.notify.typing.systemtray = &Show typing notification in the system tray
+checkbox.notify.systemtray = Show new &messages in the system tray
+checkbox.use.debugger.on.startup = Start debugger on startup
+checkbox.broadcast.hide.offline.user = Hide offline user
+checkbox.use.krbconf = Use krb5.conf or krb5.ini
+checkbox.use.krb.dns = Use DNS
+checkbox.use.specify.below = Specify below
+checkbox.use.pki.authentication = Use PKI authentication
+group.chat.name.notification = Seen your name...
+group.chat.name.match = Your name has been said in group chat:
+label.na = n/a
+label.cell = Cell
+label.work = Work
+label.home = Home
+label.contactlist.avatarsize = Contact list avatar &size:
+label.downloads = Downloads
+label.due = Due
+label.jabber.id = Jabber ID
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Which PKI method?
+label.choose.file = Choose file
+label.trust.store.password = Trust store password
+label.enter.password = Enter password
+label.move.focus.forwards = Move focus forwards
+label.move.focus.backwards = Move focus backwards
+label.keystore.location = Keystore location
+label.truststore.location = Truststore location
+label.pkcs.library.file = PKCS#11 library file
+label.x509.certificate = X.509 certificate
+label.apple.keychain = Apple KeyChain
+label.add.to.roster = Add user to your roster
+label.audio.device = &Audio device
+label.video.device = &Video device
+menuitem.bookmarks = Bookmarks
+menuitem.add.groupchat.myname = Highlight my &name when someone says it
+menuitem.add.groupchat.mytext = &Highlight my text when I say something
+menuitem.add.groupchat.popname = Show &toast popup when someone says my name
+menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
+menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
+menuitem.always.on.top = Always on top
+menuitem.open.with = Open with...
+menuitem.block.contact = Block contact
+menuitem.unblock.contact = Unblock contact
+menuitem.sign.in = Sign in
+menuitem.show.offline.users = Show offline users
+menuitem.show.contact.statusmessage = Show status message
+menuitem.bookmark.room = Bookmark room
+menuitem.refresh = Refresh
+menuitem.create.room = Create or join room
+menuitem.expand.all.groups = Expand all groups
+menuitem.collapse.all.groups = Collapse all groups
+menuitem.inivite.again = Invite again
+menuitem.chatframe.option = Options
+message.invite.to.groupchat = {0} is inviting you to join a group chat
+message.disconnected.group.chat.error = Your connection was closed due to an error, you will need to re-join this room after reconnecting
+message.disconnected.shutdown = Your connection was closed because the server was shut down
+message.enter.gadugadu = Enter your GaduGadu username and password below
+message.enter.gtalk = Enter your GTalk username and password below
+message.enter.icq = Enter your ICQ username and password below
+message.enter.irc = Enter your IRC username, password and nickname below
+message.enter.sametime = Enter your Sametime username and password below
+message.enter.facebook = Enter your Facebook username and password below
+message.enter.myspace = Enter your MySpace username and password below
+message.enter.qq = Enter your QQ Number and password below
+message.enter.room.password = Enter room password
+message.enter.simple = Enter your SIMPLE username and password below
+message.file.transfer.notification = File transfer notification
+message.file.transfer.short.message = is sending you a file called\:
+message.file.transfer.chat.window = File transfer request:
+message.gateway.username.error = Username needs to be supplied
+message.gateway.password.error = Password needs to be supplied
+message.gateway.nickname.error = Nickname needs to be supplied
+message.invalid.jid.error = The JID specified is invalid
+message.nickname.not.acceptable = Nickname change is not enabled!
+message.restart.required = You will need to restart Spark to have your changes take effect, restart now?
+message.room.creation.error = The room could not be created
+message.server.unavailable = Can't connect to server: invalid name or server not reachable
+message.specify.contact.jid = Please specify the contact JID (ex. ddman@jabber.org)
+message.specify.group = Specify contact group to add the new user to
+message.unable.to.retrieve.last.activity = Unable to determine last activity for {0}
+message.unrecoverable.error = Invalid username or password
+message.waiting.for.user.to.join = Waiting for {0} to join
+message.groupchat.require.password = This group chat room requires a password to enter
+message.search.for.history = Search conversation history
+tab.sso = SSO
+tab.pki = PKI
+title.password.required = Password required
+title.task.notification = Task notification
+title.client.logs = Client logs
+title.bookmarks = Bookmarks
+title.add.contact.group = Add contact group
+title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
+title.delete.file = Do you really want to delete this file?
+title.error.couldnt.open.file = Could not open the file
+title.error.delete.file = Could not delete file
+title.error.find.app = Could not find a matching application
+title.error.rename.file = Could not rename the file
+title.file = File
+title.filesize = Size
+title.gadugadu.registration = GaduGadu account credentials
+title.general.media = Media settings
+title.group.chat.settings = Group chat settings
+title.gtalk.registration = GTalk account credentials
+title.icq.registration = ICQ account credentials
+title.irc.registration = IRC account credentials
+title.sametime.registration = Sametime account credentials
+title.facebook.registration = Facebook account credentials
+title.myspace.registration = MySpace account credentials
+title.input.fileexplorer = Please input the name of your file browser:
+title.input.newname = Please input the new name\:
+title.input.openwith = Please input the name of the application which you want to use:
+title.login.error = Login error
+title.no.updates = No updates
+title.qq.registration = QQ account credentials
+title.simple.registration = SIMPLE account credentials
+title.tasks = Tasks
+title.xmpp.registration = XMPP account credentials
+title.appearance.showVCards = Show &VCards in the contact list
+title.subscription.request = Subscription request
+tooltip.appearance = Change the appearance of your conversations
+tooltip.file.transfer = Preferences for file transfer
+
+
+#!#
